@@ -23,6 +23,7 @@
 - Remove the kbn-version on each request to the Kibana API. {pull}17764[17764]
 - Fixed process spawning on Windows {pull}17751[17751]
 - Fixed injected log path to monitoring beat {pull}17833[17833]
+- Make sure that the Elastic Agent connect over TLS in cloud. {pull}xx[xxx]
 
 ==== New features
 
